--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -43,7 +43,7 @@
     <div class="volume-controls flex-item">
       <button class="mute">
         <i class="fa fa-volume-up"></i>
-        <input type="range" min="0" max="1" step="0.01" class="volume-container p-0 flex-item"></input>
+        <input type="range" min="0" max="0.1" step="0.001" value="0.04" class="volume-container p-0 flex-item"></input>
       </button>
     </div>
   </div>
