--- a/views/search.ejs
+++ b/views/search.ejs
@@ -197,7 +197,7 @@
                                                           </button>
                                                         </form>
                                                         <% } %>
-                                                          <i class="fa-solid fa-circle-plus"></i>
+                                                        <i class="fa-solid fa-ellipsis-vertical"></i>
                                       </div>
                                     </td>
                                 </tr>
